--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,18 @@
 <body>
   <ul class="pages">
    <li class="note_bar">
-      <div class="form">
+   <div class="form">
         <h1 class="title"> Presentation Sync </h1>
+          <p class="title">Powered by socket.io, heroku, node.js</p>
+  <p class="title">Author:<a href="http://oeway.github.io/">Will Ouyang</a></p>
         <h3 class="title">Usage:</h3>
         <p>1. Add the following link to your book mark by right click or drag it: <a class="usernameInput" maxlength="14" href="javascript:(function(){var socket_script = document.createElement('script');socket_script.src = 'https://presentation-sync.herokuapp.com/socket.io/socket.io.js';(document.head||document.documentElement).insertBefore(socket_script);})();">Presentation_Sync_Gadget</a>.</p>
         
         <p>2. Open your google presentation file and click the bookmark.</p>  
         <p>3. Anyone else open the same file and cliked the bookmark will keep be synchronised with you.</p>
-      </div>
-    
-    </li>
+      </div> 
+
+   </li>
     <li class="chat page">
       <div class="chatArea">
         <ul class="messages"></ul>
