--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     </li>
     <li class="login page">
       <div class="form">
-        <h3 class="title">What's your nickname?</h3>
+        <h3 class="title">Loading Awesomeness...</h3>
         <input class="usernameInput" type="text" maxlength="14" />
       </div>
     </li>
