add chrome extension support

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,12 @@
               <h1 class="title"> Presentation Sync for Google Presentation</h1>
               <p class="title">Powered by socket.io, heroku and node.js</p>
               <p class="title">Author:<a href="http://oeway.github.io/" target="_blank">Will Ouyang</a></p>
-              <h3 class="title">Usage:</h3>
-              <p>1. Add the following link to your book mark by right click or drag it: <a class="usernameInput" maxlength="14" href="javascript:(function(){var socket_script = document.createElement('script');socket_script.src = 'https://presentation-sync.herokuapp.com/socket.io/socket.io.js';(document.head||document.documentElement).insertBefore(socket_script);})();">Presentation_Sync_Gadget</a>. If you can't add it(on ipad for example), you can add it manually. Create a bookmark and fill url field with the text copied from <a href='bookmarklet.txt' target="_blank">this page</a> </p>
+              <h3 class="title">Usage 1: Chrome Extension</h3>
+             <p> Just add 
+<a href="https://chrome.google.com/webstore/detail/presentation-sync/eipedjifhojoogdilhodlpkajogkkdeg">Presentation Sync Extension </a> to your Chrome. Open your Presentation and click the button "Sync Present" on the page.
+		</p>
+	       <h3 class="title">Usage 2: Bookmarklet</h3>
+		 <p>1. Add the following link to your book mark by right click or drag it: <a class="usernameInput" maxlength="14" href="javascript:(function(){var socket_script = document.createElement('script');socket_script.src = 'https://presentation-sync.herokuapp.com/socket.io/socket.io.js';(document.head||document.documentElement).insertBefore(socket_script);})();">Presentation_Sync_Gadget</a>. If you can't add it(on ipad for example), you can add it manually. Create a bookmark and fill url field with the text copied from <a href='bookmarklet.txt' target="_blank">this page</a> </p>
               
               <p>2. Open your google presentation file and click the bookmark.</p>
               <p>3. Anyone else open the same file and cliked the bookmark will keep be synchronised with you.</p>
