--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 <a href="https://chrome.google.com/webstore/detail/presentation-sync/eipedjifhojoogdilhodlpkajogkkdeg" target="_blank">Presentation Sync Extension </a> to your Chrome. Open your Presentation and click the button "Sync Present" on the page.
 		</p>
 	       <h3 class="title">Usage 2: Bookmarklet</h3>
-		 <p>1. Add the following link to your book mark by right click or drag it: <a class="usernameInput" maxlength="14" href="javascript:(function(){var socket_script = document.createElement('script');socket_script.src = 'https://presentation-sync.herokuapp.com/socket.io/socket.io.js';(document.head||document.documentElement).insertBefore(socket_script);})();">Presentation_Sync_Gadget</a>. If you can't add it(on ipad for example), you can add it manually. Create a bookmark and fill url field with the text copied from <a href='bookmarklet.txt' target="_blank">this page</a> </p>
+		 <p>1. Add the following link to your bookmark by right click or drag it: <a class="usernameInput" maxlength="14" href="javascript:(function(){var socket_script = document.createElement('script');socket_script.src = 'https://presentation-sync.herokuapp.com/socket.io/socket.io.js';(document.head||document.documentElement).insertBefore(socket_script);})();">Presentation_Sync_Gadget</a>. If you can't add it(on ipad for example), you can add it manually by click here <button onclick="bookmarkletPrompt">Bookmarklet</button> or create a bookmark and fill url field with the text copied from <a href='bookmarklet.txt' target="_blank">this page</a> </p>
               
               <p>2. Open your google presentation file and click the bookmark.</p>
               <p>3. Anyone else open the same file and cliked the bookmark will keep be synchronised with you.</p>
@@ -36,7 +36,13 @@
       </div>
     </li>
   </ul>
+<script>
+function bookmarkPrompt()
+{
+prompt("Copy the following text to a new bookmark as web address","javascript:(function()%7Bvar socket_script %3D document.createElement(%27script%27)%3Bsocket_script.src %3D %27https://presentation-sync.herokuapp.com/socket.io/socket.io.js%27%3B(document.head%7C%7Cdocument.documentElement).insertBefore(socket_script)%3B%7D)()%3B");
 
+}
+</script>
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
   <script src="/main.js"></script>
