--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
     </li>
   </ul>
 <script>
-function bookmarkPrompt()
+function bookmarkletPrompt()
 {
 prompt("Copy the following text to a new bookmark as web address","javascript:(function()%7Bvar socket_script %3D document.createElement(%27script%27)%3Bsocket_script.src %3D %27https://presentation-sync.herokuapp.com/socket.io/socket.io.js%27%3B(document.head%7C%7Cdocument.documentElement).insertBefore(socket_script)%3B%7D)()%3B");
 
